--- a/data/projects.json
+++ b/data/projects.json
@@ -1,56 +1,54 @@
 [
   {
-    "slug": "todo-application",
-    "title": "Todo Application",
+    "slug": "travel-list-application",
+    "title": "Travel List Application",
     "category": "Web App",
-    "short": "A task management app with local storage functionality",
-    "description": "A fully functional todo application built with vanilla JavaScript. Features include adding, editing, deleting tasks, marking as complete, filtering by status, and persistent storage using localStorage. The app demonstrates CRUD operations and modern JavaScript ES6+ features.",
-    "featured": "/images/projects/todo-app/hero.jpg",
+    "short": "A travel packing list manager with local storage functionality",
+    "description": "A fully functional travel list application built with vanilla JavaScript. Features include adding, editing, deleting items, marking as packed, filtering by status, and persistent storage using localStorage. The app demonstrates CRUD operations and modern JavaScript ES6+ features for organizing travel essentials.",
+    "featured": "/images/TTA_1.png",
     "images": [
-      "/images/projects/todo-app/hero.jpg",
-      "/images/projects/todo-app/screenshot1.jpg",
-      "/images/projects/todo-app/screenshot2.jpg",
-      "/images/projects/todo-app/screenshot3.jpg"
+      "/images/TTA_1.png",
+      "/images/TTA_2.png",
+      "/images/TTA_3.png"
     ],
     "tech": ["JavaScript", "HTML5", "CSS3", "LocalStorage", "UI Design"],
     "features": [
-      "Add, edit, and delete tasks with ease",
-      "Mark tasks as completed with visual feedback",
-      "Filter tasks by all, active, or completed status",
+      "Add, edit, and delete items with ease",
+      "Mark items as packed with visual feedback",
+      "Filter items by all, needed, or packed status",
       "Persistent storage using browser localStorage",
       "Responsive design works on all devices",
       "Clean and intuitive user interface"
     ],
     "challenges": "The main challenge was implementing efficient localStorage management and ensuring data persistence across browser sessions. I learned about proper data serialization and handling edge cases.",
-    "repo": "https://github.com/yourusername/todo-app",
-    "live": "https://todo-app-demo.netlify.app",
-    "date": "2024-01"
+    "repo": "https://github.com/shi0hara/C219-Travel-List-App",
+    "live": "https://shi0hara.github.io/C219-Travel-List-App/",
+    "date": "2025"
   },
   {
-    "slug": "weather-dashboard",
-    "title": "Weather Dashboard",
-    "category": "Web App",
-    "short": "Real-time weather information using OpenWeather API",
-    "description": "An interactive weather dashboard that provides real-time weather data for any city worldwide. Built with vanilla JavaScript and integrated with the OpenWeather API to fetch current conditions, 5-day forecasts, and weather alerts. Features a clean, modern UI with weather icons and temperature animations.",
-    "featured": "/images/projects/weather-dashboard/hero.jpg",
+    "slug": "sustainable-ecommerce",
+    "title": "Sustainable E-Commerce (Figma Design)",
+    "category": "Design / E-Commerce",
+    "short": "Figma prototype for a sustainable e-commerce storefront",
+    "description": "Figma design for a sustainable e-commerce website focused on eco-friendly products and ethical sourcing. Includes homepage layout, product cards, cart flow, and responsive layouts. Referenced from FIG_Homepage and FIG_HOMEPROD Figma artboards.",
+    "featured": "/images/FIG_Homepage.png",
     "images": [
-      "/images/projects/weather-dashboard/hero.jpg",
-      "/images/projects/weather-dashboard/screenshot1.jpg",
-      "/images/projects/weather-dashboard/screenshot2.jpg",
-      "/images/projects/weather-dashboard/screenshot3.jpg"
+      "/images/FIG_Homepage.png",
+      "/images/FIG_HOMEPROD.png",
+      "/images/FIG_ContactMob.png",
+      "/images/FIG_prodcart.png"
     ],
-    "tech": ["JavaScript", "REST API", "CSS3", "HTML5", "Async/Await"],
+    "tech": ["Figma", "UI/UX", "Responsive Design", "Accessibility"],
     "features": [
-      "Search weather by city name or coordinates",
-      "Display current temperature, humidity, and wind speed",
-      "5-day weather forecast with detailed information",
-      "Dynamic background changes based on weather conditions",
-      "Geolocation support for automatic location detection",
-      "Temperature unit conversion (Celsius/Fahrenheit)"
+      "Homepage hero with sustainable messaging",
+      "Product listing and filtering UX",
+      "Accessible cart flow and checkout mockups",
+      "Responsive layouts for mobile and desktop",
+      "Design tokens and component system in Figma"
     ],
-    "challenges": "Working with asynchronous API calls and handling various error states was challenging. I implemented proper error handling and loading states to improve user experience.",
-    "repo": "https://github.com/yourusername/weather-dashboard",
-    "live": "https://weather-dashboard-demo.netlify.app",
+    "challenges": "Designing for sustainability required careful consideration of content hierarchy, eco-focused messaging, and accessible interactions.",
+    "repo": "https://www.figma.com/design/oimyxVcXQ6qNb26olak55G/CA1?node-id=5-142&t=VJrOSLs1jBcQP4Q0-1",
+    "live": "https://www.figma.com/proto/oimyxVcXQ6qNb26olak55G/CA1?node-id=5-142&t=VJrOSLs1jBcQP4Q0-1&scaling=scale-down",
     "date": "2024-02"
   },
   {
@@ -81,84 +79,81 @@
     "date": "2024-03"
   },
   {
-    "slug": "e-commerce-store",
-    "title": "E-Commerce Store",
-    "category": "Web App",
-    "short": "Online shopping platform with cart functionality",
-    "description": "A fully functional e-commerce website featuring product listings, shopping cart, checkout process, and order management. Built with React and integrated with a mock API for product data. Includes search, filtering, sorting capabilities, and a responsive design.",
-    "featured": "/images/projects/ecommerce/hero.jpg",
+    "slug": "vr-escape-room",
+    "title": "VR Escape Room (Alchemist Lab)",
+    "category": "Game Design / VR",
+    "short": "Unity VR escape room with interactive puzzles and XR Toolkit",
+    "description": "A VR escape room experience set in an Alchemist's Lab built with Unity and XR Toolkit. Players wake up in a mysterious basement and must solve three interconnected puzzles involving keys, riddles, counting objects, and tic-tac-toe logic to escape. Features interactive object manipulation, teleportation, and immersive VR mechanics.",
+    "featured": "/images/VR_DOOR.png",
     "images": [
-      "/images/projects/ecommerce/hero.jpg",
-      "/images/projects/ecommerce/screenshot1.jpg",
-      "/images/projects/ecommerce/screenshot2.jpg",
-      "/images/projects/ecommerce/screenshot3.jpg"
+      "/images/VR_DOOR.png",
+      "/images/Unity_Pad.png"
     ],
-    "tech": ["React", "JavaScript", "CSS3", "REST API", "React Router"],
+    "tech": ["Unity", "C#", "XR Toolkit", "VR", "Game Design"],
     "features": [
-      "Product catalog with detailed product pages",
-      "Shopping cart with add/remove/update quantities",
-      "Product search and advanced filtering",
-      "Sort by price, popularity, and ratings",
-      "Responsive design for mobile shopping",
-      "Checkout process with form validation"
+      "Three unique puzzle-solving challenges",
+      "VR interactions: grabbing, teleporting, and object manipulation",
+      "Riddle-based gameplay with hidden clues",
+      "Keypad code entry system with logic puzzles",
+      "Tic-tac-toe pattern recognition mechanics",
+      "20-30 minute immersive gameplay experience"
     ],
-    "challenges": "Managing complex state across multiple components and implementing the shopping cart logic was challenging. I learned about React Context API and proper state management patterns.",
-    "repo": "https://github.com/yourusername/ecommerce-store",
-    "live": "https://ecommerce-demo.netlify.app",
+    "challenges": "Designing intuitive VR interactions and balancing puzzle difficulty was challenging. I learned about XR Toolkit implementation, spatial puzzle design, and creating engaging gameplay loops in VR environments.",
+    "repo": "https://github.com/shi0hara/VR-Escape-Room",
+    "live": "",
     "date": "2024-04"
   },
   {
-    "slug": "recipe-finder",
-    "title": "Recipe Finder",
+    "slug": "assignment-tracker",
+    "title": "Assignment Tracker",
     "category": "Web App",
-    "short": "Discover recipes using Spoonacular API",
-    "description": "An interactive recipe finder application that helps users discover new recipes based on ingredients, dietary preferences, and cuisine types. Integrated with Spoonacular API to provide detailed recipe information, nutritional data, and cooking instructions.",
-    "featured": "/images/projects/recipe-finder/hero.jpg",
+    "short": "Student assignment management system with deadlines and progress tracking",
+    "description": "A comprehensive assignment tracking application designed for students to manage coursework, deadlines, and submission status. Features task categorization, priority levels, calendar integration, and progress visualization to help students stay organized and meet academic deadlines.",
+    "featured": "/images/assignment_1.png",
     "images": [
-      "/images/projects/recipe-finder/hero.jpg",
-      "/images/projects/recipe-finder/screenshot1.jpg",
-      "/images/projects/recipe-finder/screenshot2.jpg",
-      "/images/projects/recipe-finder/screenshot3.jpg"
+      "/images/assignment_1.png",
+      "/images/assignment_2.png",
+      "/images/assignment_3.png",
+      "/images/assignment_4.png",
+      "/images/assignment_5.png"
     ],
-    "tech": ["JavaScript", "REST API", "HTML5", "CSS3", "Local Storage"],
+    "tech": ["JavaScript", "HTML5", "CSS3", "LocalStorage", "Date/Time API"],
     "features": [
-      "Search recipes by ingredients or name",
-      "Filter by dietary restrictions and cuisines",
-      "View detailed recipe information and instructions",
-      "Save favorite recipes to local storage",
-      "Nutritional information display",
-      "Random recipe suggestion feature"
+      "Add, edit, and delete assignments with deadlines",
+      "Priority levels and status tracking (pending, in progress, completed)",
+      "Filter and sort by due date, priority, or subject",
+      "Visual progress indicators and completion percentage",
+      "Calendar view for upcoming deadlines",
+      "Persistent storage with localStorage"
     ],
-    "challenges": "Handling API rate limits and implementing efficient caching strategies was important. I learned about debouncing search inputs and optimizing API calls to improve performance.",
-    "repo": "https://github.com/yourusername/recipe-finder",
-    "live": "https://recipe-finder-demo.netlify.app",
+    "challenges": "Managing date/time calculations and implementing intuitive deadline reminders required careful planning. I learned about the JavaScript Date API, sorting algorithms, and designing effective notification systems for time-sensitive tasks.",
+    "repo": "https://github.com/CupOCino/Team-4-card-app-starter",
+    "live": "https://c219-ca2-frontend.onrender.com",
     "date": "2024-05"
   },
   {
-    "slug": "quiz-application",
-    "title": "Quiz Application",
+    "slug": "pizza-delivery-app",
+    "title": "Pizza Delivery App",
     "category": "Web App",
-    "short": "Interactive quiz game with multiple categories",
-    "description": "An engaging quiz application featuring multiple categories, difficulty levels, and a scoring system. Built with vanilla JavaScript using the Open Trivia Database API. Includes timer functionality, score tracking, and result analysis with visual feedback.",
-    "featured": "/images/projects/quiz-app/hero.jpg",
+    "short": "Online pizza ordering system with customization and delivery tracking",
+    "description": "A responsive pizza delivery web application that allows users to browse menu items, customize pizzas, manage shopping cart, and place orders. Built with modern JavaScript, featuring real-time order tracking, custom pizza builder, and seamless checkout experience.",
+    "featured": "/images/Pizza_1.png",
     "images": [
-      "/images/projects/quiz-app/hero.jpg",
-      "/images/projects/quiz-app/screenshot1.jpg",
-      "/images/projects/quiz-app/screenshot2.jpg",
-      "/images/projects/quiz-app/screenshot3.jpg"
+      "/images/Pizza_1.png",
+      "/images/Pizza_2.png"
     ],
-    "tech": ["JavaScript", "HTML5", "CSS3", "REST API", "DOM Manipulation"],
+    "tech": ["JavaScript", "HTML5", "CSS3", "LocalStorage", "Responsive Design"],
     "features": [
-      "Multiple quiz categories and difficulty levels",
-      "Timer functionality for each question",
-      "Real-time score tracking and display",
-      "Visual feedback for correct/incorrect answers",
-      "Results summary with performance analysis",
-      "Restart and category selection options"
+      "Browse pizza menu with detailed descriptions",
+      "Custom pizza builder with toppings selection",
+      "Shopping cart with add/remove/update quantities",
+      "Order summary and checkout process",
+      "Responsive design for mobile ordering",
+      "Local storage for cart persistence"
     ],
-    "challenges": "Implementing the timer logic and ensuring accurate score calculation required careful state management. I learned about setInterval, clearInterval, and proper cleanup of event listeners.",
-    "repo": "https://github.com/yourusername/quiz-app",
-    "live": "https://quiz-app-demo.netlify.app",
+    "challenges": "Building an intuitive pizza customization interface and managing cart state across sessions required careful planning. I learned about dynamic form handling and optimizing user experience for food ordering workflows.",
+    "repo": "https://github.com/shi0hara/C219-Pizza-Delivery-App",
+    "live": "https://shi0hara.github.io/C219-Pizza-Delivery-App/",
     "date": "2024-06"
   },
   {
